# belajar_cpp

./: .gitignore  CMakeLists.txt
03_pendahuluan/: part_1.cpp
04_compiling/: compiling_1.cpp  compiling_2.cpp  preproccessing_2.cpp  preprocessing_1.cpp  preprocessing_1.p  preprocessing_2.p
05_printing/: printing_1.cpp  printing_2_buffer_flush.cpp
06_variabel/: variabel_1.cpp
07_deklrasi/: deklarasi_1.cpp  garbage_value.cpp
08_tipe_data/: tipe_data_1.cpp
09_aritmatika/: aritmatika_1.cpp
10_komparasi/: komparasi_1.cpp
11_logika_digital/: logika_1.cpp
12_if_statement/: if_1.cpp
13_if_else/: if_else_1.cpp
14_swtich_case/: switch_case_1.cpp
15_latihan_calculator/: calculator_sederhana_1.cpp  calculator_switch_case.cpp
16_assignment_operator/: assignment_1.cpp
17_increment_decrement/: increment_decrement_1.cpp
18_while_loop/: while_loop_1.cpp
19_do_while/: do_while_1.cpp
20_for_loop/: for_loop_1.cpp
21_break_and_continue/: flow_1.cpp
22_latihan_fibonacci/: fibonacci.cpp  fibonacci_2.cpp
23_latihan_pattern/: segitiga_siku.cpp
24_pengenalan_fungsi/: fungsi_1.cpp
25_latihan_dadu/: dadu.cpp  random_number.cpp
26_function_value_returning/: return_fungsi_1.cpp  return_fungsi_2.cpp
27_function_void/: fungsi_void.cpp
28_latihan_fungsi/: keliling_persegi.cpp
29_function_prototype/: function_prototype_1.cpp
30_scope/: scope_1.cpp
31_function_default_argument/: default_argument_1.cpp
32_function_overloading/: overloading_1.cpp
33_function_recursive/: recursive.cpp
34_latihan_recursive/: factorial_recursive.cpp  fibonacci_recursive.cpp
35_pointer/: pointer_1.cpp
36_reference/: reference_1.cpp
37_function_with_pointer/: function_with_pointer_1.cpp
38_function_with_reference/: function_with_reference.cpp
39_pendahuluan_array/: array_1.cpp  array_2.cpp
40_standard_library_array/: stl_array.cpp
41_latihan_array/: latihan_array_1.cpp
42_looping_array/: looping_array_1.cpp  looping_array_2.cpp
43_multidimensi_array/: multidimensional_STL_array.cpp  multidimensional_standard_array_1.cpp
44_sort_array/: sort_array_1.cpp
45_latihan_membuat_sort_algorithm/: bubble_sort.cpp  selection_sort.cpp
46_search_array/: search_array_1.cpp
47_pengenalan_string/: string_1.cpp
48_operasi_pada_string/: operasi_string_1.cpp
49_komparasi_string/: komparasi_string_1.cpp
50_substring/: substring_1.cpp
51_subtitusi_string/: subtitusi_string_1.cpp
52_member_function_of_string/: member_function_of_string.cpp
53_getLine_console_string/: ambil_variabel_getline.cpp  getLine_console_string.cpp  getline_after_cin.cpp
54_struct/: struct_1.cpp  struct_constructor.cpp  struct_default.cpp  struct_member_function.cpp
55_nesting_struct/: nesting_struct_1.cpp
56_union/: union_1.cpp
57_pendahuluan_vector_stl/: pengenalan_vector_1.cpp
58_enum/: enum_1.cpp  enum_class.cpp
59_Ternary_Operator/: ternary_assignment.cpp  ternary_conditional_void_expression.cpp  ternary_operator.cpp
60_comma_operator/: comma_operator_1.cpp
61_bitwise_operator/: bitwise_bit_masking.cpp  bitwise_operator_1.cpp  bitwise_overflow_underflow.cpp  bitwise_swap.cpp  latihan_bitwise_bit_masking.cpp  latihan_bitwise_ganjil_genap.cpp
62_casting_operator/: casting_operator_1.cpp  static_cast.cpp
63_output_file_stream/: ofstream_1.cpp  ofstream_file_mode_flag.cpp  ofstream_lanjutan.cpp  pointer_position_ofstream.cpp
64_input_file_stream/: ifstream_1.cpp  ifstream_lanjutan.cpp
65_menulis_binary_file/: menulis_binary_file.cpp
66_membaca_binary_file/: membaca_binary_file.cpp
67_latihan_io_external/: latihan_baca_io_binary_file.cpp  latihan_io_binary_file.cpp
68_latihan_project_crud/: main.cpp
69_preprocessing_directive/: ifdef_ifndef_pragma.cpp  macro_define_undef.cpp  mylib.h  preprocessing_directive.cpp  preprocessing_if_else.cpp  preprocessing_include.cpp
70_namespace/: namepace_1.cpp
71_latihan_multifile/: PesertaDidik.cpp  PesertaDidik.h  main.cpp  utils.cpp  utils.h
72_type_def/: typedef_1.cpp
73_template_fungsi/: template_fungsi_1.cpp
74_lambda_function/: lambda_function.cpp  lambda_function.md
994_uji_coba_osn_26/: 01_candil.cpp  02_menghitung_subsokuens_osn.cpp
995_codeforce/: 01_watermelon.cpp  02_a_way_too_long_words.cpp  03_team.cpp
996_soal_OSN_P_24/: 01_A_string_cantik_OSN.cpp  02_A_string_cantik_OSN.cpp  03_berbagi_banyak_cendil.cpp
997_soal_OSN_K_26/: index_genap.cpp  tambah_nilai_index.cpp
998_Standard_Library_Tambahan/: 01_stoi.cpp  02_pair.cpp  03_tuple.cpp  04_iterator.cpp  04_iterator.md  05_algorithm.cpp  05_algorithm.md  06_next_permutation.cpp  07_ranges.cpp  08_set.cpp  09_map.cpp
999_latihan_TOKI/: 07_4_parameter.cpp  08_6_kalkulator_string.cpp  09_4_hitung_vokal_rekursif.cpp  09_5_jumlah_digit.cpp  09_6_cek_polindrom.cpp  09_7_konversi_biner.cpp  11_1_jumlah_bilangan.cpp  11_3_membasikan_bebek_3.cpp  12_6_pembuangan_string.cpp  12_8_cek_bilangan_prima.cpp  12_9_caesar_chiper.cpp  6_7_menutup_toko.cpp
999_latihan_TOKI/BAB 2 MATEMATIKA DISKRET DASAR/: 01_factorial_modular.cpp  02_check_prime.cpp  03_check_prime_sqrt.cpp  04_prime_generation_sqrt.cpp  05_sieve_of_eratosthenes.cpp  06_algoritma_euclid_fpb.cpp  07_subhimpunan_terbagi.cpp  08_naive_pascal_triangle.cpp  09_pascal_triangle.cpp  10_pretty_pascal_triangle.cpp  11_binomial.cpp
999_latihan_TOKI/BAB 3 PENCARIAN DAN PENGURUTAN/: 3_1_0_Sepatu_untuk_Bebek.md  3_1_1_sequential_search.cpp  3_1_1_sequential_search.md  3_1_2_binary_search.cpp  3_1_2_binary_search.md  3_2_0_Bebek_Berbaris.md  3_2_1_bubble_sort.cpp  3_2_2_selection_sort.cpp  3_2_3_insertion_sort.cpp  3_2_4_counting_sort.cpp  utils.h
999_latihan_TOKI/BAB 4 BRUTE FORCE/: 01_BF_subset_sum.cpp  02_BF_subset_sum_pruning.cpp  03_BF_mengatur_persamaan.cpp  04_BF_mengatur_persamaan_fast.cpp  05_LAT_Pencarian_3_Angka.cpp  06_LAT_Pencarian_3_Angka_1.cpp  07_LAT_Pencarian_3_Angka_2.cpp  08_LAT_Pencarian_3_Angka_3.cpp  09_LAT_Subarray_Kontinu_Maksimum.cpp  10_mencari_sepasang_kartu.cpp  11_mencari_sepasang_kartu_2.cpp  12_panen_raya_buah_melon.cpp  13_panen_raya_buah_melon_2.cpp  24_tim_elit_bebek.cpp  (+10 more)
(+43 files in other folders)
